# aml-project-1

./: README.md  demo.ipynb  pyproject.toml  requirements.txt  task3.ipynb  task3_results.csv  task3_visualizations.ipynb
src/: unlabeled_logreg_short.py
src/data/: loader.py  missing_data.py
src/data_info/: data_loader.py  missing_data.py
src/experiments/: comparison.ipynb  comparison_lr.ipynb  comparison_unlabeled.ipynb  task3.ipynb  task3_results_ola.csv  task3_results_small.csv  task3_visualizations.ipynb  utils.py
src/fista/: lr.py
src/models/: fista_lr.py  measures.py  unlabeled_lr.py
