[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fista"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.1",
    "matplotlib==3.10.8",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "ucimlrepo==0.0.7",
    "ipykernel",
    "ipython",
    "jupyter_client",
    "jupyter_core",
]
